<resources>
    <string name="search">search...</string>
    <string name="what_do_you_want_to_rent">What do you want to rent?</string>
    <string name="khmer">KHMER</string>
    <string name="graduation">GRADUATION</string>
    <string name="wedding">WEDDING</string>
    <string name="weekend">WEEKEND</string>
    <string name="home">HOME</string>
    <string name="trending_now">TRENDING NOW</string>
    <string name="khmer_editor">KHMER EDITOR</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="size">Size</string>
    <string name="language">Language</string>
    <string name="my_address">My Address</string>
    <string name="languas">Languas</string>
    <string name="name">Name</string>
    <string name="full_name">Full name</string>
    <string name="number_phone">number phone</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="address">Address</string>
    <string name="address_detail">Address detail</string>
    <string name="sing_up">SING UP</string>
    <string name="sing_in">SING IN</string>
    <string name="message_center">Message Center</string>
    <string name="post_title">*Describe what you are rent in detail to more user</string>
    <string name="post_description">*Describe what you are rent in detail to more user</string>
    <string name="rent_price">* Rent Price</string>
    <string name="original_price">Original Price</string>
    <string name="day_for_rent">*Day for rent</string>
    <string name="category">*Category</string>
    <string name="condition">* Condition</string>
    <string name="delivery_method">* Delivery Method</string>
    <string name="face_to_face">Face To Face</string>
    <string name="delivery">Delivery</string>
    <string name="brand_new">Brand new</string>
    <string name="almost_new">Almost new</string>
    <string name="good">Good</string>
    <string name="please_add_you_address">Please add you address</string>
    <string name="payment">Payment</string>
    <string name="select_size">Select Size</string>
    <string name="delivery_amp_return"><![CDATA[Delivery & Return]]></string>
    <string name="description">description</string>
    <string name="rentnow">RentNow</string>
    <string name="title">title</string>
    <string name="orderstatus">orderstatus</string>
    <string name="price">price</string>
    <string name="day">day</string>
    <string name="orderdate">orderdate</string>
    <string name="reject">Reject</string>
    <string name="comfirm">Comfirm</string>
    <string name="log_out">Log Out</string>
    <string name="setting">Setting</string>
    <string name="sold_out">SOLD OUT</string>
    <string name="rent_center">Rent Center</string>
    <string name="order">ORDER</string>
    <string name="selling">SELLING</string>
    <string name="favorite">Favorite</string>
    <string name="find_friends">Find Friends</string>
    <string name="profile">Profile</string>
    <string name="my_shop_activity">My Shop Activity</string>
    <string name="system_settings">System Settings</string>
    <string name="identity_card">Identity Card</string>
    <string name="input_your_email">Input your email</string>
    <string name="input_your_password">Input your password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="ic_home">Home</string>
    <string name="ic_favorite">Favorite</string>
    <string name="ic_card">Card</string>
    <string name="ic_account">Account</string>
</resources>