<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/arrow_back"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_backe"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/my_address"/>
    </RelativeLayout>
    <View
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/line_13"
        />
    <TextView
    android:textColor="@color/black"
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="24dp"
    android:text="@string/name"/>

    <EditText
        android:paddingStart="16sp"
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@drawable/custom_icsearch"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/full_name"
        android:inputType="textPersonName" />

    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/number_phone"/>
    <EditText
        android:id="@+id/editTextPhone"
        android:paddingStart="16sp"
        android:hint="@string/your_phone_number"
        android:background="@drawable/custom_icsearch"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="number" />
    <TextView
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Address"/>
    <EditText
        android:paddingStart="16dp"
        android:hint="@string/address"
        android:background="@drawable/custom_icsearch"
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>
    <TextView
        android:textColor="@color/black"
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/address_detail"/>
    <EditText
        android:paddingStart="16dp"
        android:hint="@string/address_detail"
        android:background="@drawable/custom_icsearch"
        android:id="@+id/EditTextAddressDetail"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>
    <TextView
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="ID Card"/>
    <ImageView
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/bt_select_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/im_add_photo"
        tools:ignore="RtlSymmetry" />
    <Button
        android:id="@+id/ButtonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="ADD"/>
</LinearLayout>