<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginStart="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_backe"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Rent Product"/>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_marginStart="6dp"
        android:id="@+id/Image_Product0"
        android:layout_width="80dp"
        android:layout_height="119dp"
        android:background="@color/cardview_dark_background"
        app:cardCornerRadius="13dp">
        <ImageView
            android:id="@+id/image_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:padding="5dp"
        android:paddingHorizontal="13dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_backgrownd_post"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:textAlignment="textEnd"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/textView11"
            android:text="title" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            android:text="@string/title" />

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/orderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/orderstatus" />

        <TextView
            android:id="@+id/order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:text="@string/orderstatus" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orderStatus"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView12"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="name" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/price" />

        <TextView
            android:id="@+id/id_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:text="price" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView13"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/day" />

        <TextView
            android:id="@+id/id_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView13"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:text="day" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView14"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/delivery" />

        <TextView
            android:id="@+id/id_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView14"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:text="delivery" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView15"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/size" />

        <TextView
            android:id="@+id/id_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView15"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:text="size" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView16"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/orderdate" />

        <TextView
            android:id="@+id/order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView16"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:text="orderdate" />



    </RelativeLayout>
    <RelativeLayout
        android:padding="10dp"
        android:paddingHorizontal="13dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_backgrownd_post"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:paddingBottom="10dp"
            android:text="@string/address" />

        <TextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:paddingBottom="10dp"
            android:text="Address" />
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/text_address"
            android:layout_marginStart="10dp"
            android:text="@string/description"/>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/description"
            android:layout_marginStart="8dp"
            android:text="Description"/>

    </RelativeLayout>
    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginStart="16dp"
            android:id="@+id/bt_reject"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/radio_null_select"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/reject"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="26sp"/>

        <TextView
            android:id="@+id/bt_accept"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/custom_bt_post"
            android:gravity="center"
            android:text="@string/comfirm"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp" />
    </RelativeLayout>
</LinearLayout>