<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/arrow_back"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_backe"/>
        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="All Categories"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </RelativeLayout>
    <View
        android:id="@+id/line_13"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/line_13"
        />
    <LinearLayout
        android:layout_marginTop="16dp"
        android:id="@+id/linearImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/im_khmer"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/im_khmer"/>
            <TextView
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/im_khmer"
                android:layout_alignEnd="@+id/im_khmer"
                android:layout_below="@id/im_khmer"
                android:text="@string/khmer"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="46sp">
            <ImageView
                android:id="@+id/im_graduate"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/im_graduate"
                android:contentDescription="GRADUATION"
                tools:ignore="HardcodedText" />
            <TextView
                android:layout_alignEnd="@id/im_graduate"
                android:layout_alignStart="@id/im_graduate"
                android:layout_below="@id/im_graduate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graduation"
                android:textAlignment="center"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/im_wedding"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contentDescription="WEDDING"
                android:src="@drawable/im_wedding"
                tools:ignore="HardcodedText" />
            <TextView
                android:textSize="12sp"
                android:layout_alignEnd="@id/im_wedding"
                android:layout_alignStart="@id/im_wedding"
                android:layout_below="@+id/im_wedding"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/wedding"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="23dp"
        android:gravity="start">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/im_weekend"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contentDescription="WEEKEND"
                android:src="@drawable/im_weekend"
                tools:ignore="HardcodedText,ImageContrastCheck" />
            <TextView
                android:textSize="12sp"
                android:layout_alignEnd="@+id/im_weekend"
                android:layout_alignStart="@id/im_weekend"
                android:layout_below="@id/im_weekend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/weekend"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp">
            <ImageView
                android:layout_marginEnd="16dp"
                android:id="@+id/im_home"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:contentDescription="HOME"
                android:src="@drawable/im_home"
                tools:ignore="HardcodedText,ImageContrastCheck" />
            <TextView
                android:textSize="12sp"
                android:layout_below="@id/im_home"
                android:layout_alignStart="@id/im_home"
                android:layout_alignEnd="@+id/im_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/home"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>